documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

typedef struct
{
    ULONG  ctrlflags;           //User writes message configuration options
    USHORT flag1;               //Card writes message flag 1
    USHORT flag2;               //Card writes message flag 2
    USHORT errflags;            //Card writes error flags
    USHORT actflags;            //Card writes activity flags
    USHORT resptime1;           //Card writes response time 1
    USHORT resptime2;           //Card writes response time 2
    USHORT datacount;           //Card writes data count
    USHORT resv7;               //Reserved field
    ULONG  timetag;             //Card writes time tag
    ULONG  elapsetime;          //Card writes elapsed time
    USHORT resv12;              //Reserved field
    USHORT resv13;              //Reserved field
    USHORT resv14;              //Reserved field
    USHORT resv15;              //Reserved field
    USHORT resv16;              //Reserved field
    USHORT resv17;              //Reserved field
    USHORT resv18;              //Reserved field
    USHORT resv19;              //Reserved field
    USHORT cwd1;                //User writes command word 1
    USHORT cwd2;                //User writes command word 2
    USHORT swd1;                //Card writes status word 1
    USHORT swd2;                //Card writes status word 2
    USHORT data[32];            //User writes data words
    USHORT extra[8];            //User writes extra words
} XMITFIELDS;
typedef XMITFIELDS * LPXMITFIELDS;

/**
*
*  PC1553-3 Driver functions.
*
**/

P13W32API ERRVAL __stdcall P13_BCConfig(ULONG configval,HCARD handleval);

P13W32API MSGADDR __stdcall P13_BCCreateMsg(ULONG configval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedFrame(ULONG timeval,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedMsg(MSGADDR msgaddr,HCARD handleval);

P13W32API SCHNDX __stdcall P13_BCSchedRetry(USHORT condition,USHORT retries,HCARD handleval);

P13W32API ERRVAL __stdcall P13_BCTransmitMsg(LPXMITFIELDS xmitfields,HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardClose(HCARD handleval);

P13W32API HCARD __stdcall P13_CardOpen(ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval);

P13W32API HCARD __stdcall P13_CardOpenP12(ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval);

P13W32API VOID __stdcall P13_CardReset(HCARD handleval);

P13W32API ERRVAL __stdcall P13_CardStart(HCARD handleval);

P13W32API BOOL __stdcall P13_CardStop(HCARD handleval);

P13W32API ERRVAL __stdcall P13_ErrorCtrl(ULONG ctrlval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_ErrorDefine(ULONG defineval,USHORT errvalue,INT countval,USHORT wordpos,USHORT bitpos,HCARD handleval);

P13W32API BOOL __stdcall P13_ErrorSent(HCARD handleval);

P13W32API ERRVAL __stdcall P13_ErrorTagBC(BOOL tagval,MSGADDR msgaddr,HCARD handleval);

P13W32API ERRVAL __stdcall P13_ErrorTagRT(BOOL tagval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_MonConfig(ULONG configval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_MonFilterSA(INT taval,ULONG rcvsamask,ULONG xmtsamask,ULONG rcvmcmask,ULONG xmtmcmask,HCARD handleval);

P13W32API ERRVAL __stdcall P13_MonFilterTA(ULONG tamask,HCARD handleval);

P13W32API BOOL __stdcall P13_MonIsRunning(HCARD handleval);

P13W32API USHORT __stdcall P13_MonRd(LPUSHORT buf,HCARD handleval);

P13W32API VOID __stdcall P13_MsgDataRd(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);

P13W32API VOID __stdcall P13_MsgDataWr(LPUSHORT buf,INT count,MSGADDR msgaddr,HCARD handleval);

P13W32API ULONG __stdcall P13_MsgFieldRd(USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);

P13W32API ULONG __stdcall P13_MsgFieldWr(ULONG fieldval,USHORT fieldtype,MSGADDR msgaddr,HCARD handleval);

P13W32API ERRVAL __stdcall P13_RTConfig(ULONG configval,INT taval,HCARD handleval);

P13W32API MSGADDR __stdcall P13_RTCreateMsg(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API MSGADDR __stdcall P13_RTGetMsg(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);

P13W32API ERRVAL __stdcall P13_RTSWDWr(USHORT swdval,INT taval,HCARD handleval);

P13W32API USHORT __stdcall P13_ValPackCWD(INT TAval,INT TRflag,INT SAval,INT WCval);

P13W32API VOID __stdcall P13_ValUnpackCWD(USHORT CWDval,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT WCval);


P13W32API USHORT __stdcall PC1553_Bitset(USHORT wordval,INT bitvalue,INT bitnum);

P13W32API BOOL __stdcall PC1553_Bittest(USHORT wordval,INT bitnum);

P13W32API VOID __stdcall PC1553_Clearlist(INT fh);

P13W32API VOID __stdcall PC1553_Config(INT reg0,INT reg1,INT reg2,INT portval);

P13W32API ERRVAL __stdcall PC1553_Execute(LPCSTR nameptr,LPUSHORT swdptr,LPVOID dwdptr,INT segval,INT portval,INT fh);

P13W32API VOID __stdcall PC1553_Freedrv(VOID);

P13W32API INT __stdcall PC1553_Loadlist(LPCSTR filename);

P13W32API USHORT __stdcall PC1553_Maskshift(USHORT inputval,INT startbit,INT lengthval);

P13W32API USHORT __stdcall PC1553_Packcwd(INT TAval,INT TRval,INT SAval,INT WCval);

P13W32API USHORT __stdcall PC1553_Packwd(USHORT inputval,USHORT oldval,INT startbit,INT lengthval);

P13W32API VOID __stdcall PC1553_Readbcdwd(INT countval,INT startval,LPVOID destptr,INT segval);

P13W32API INT __stdcall PC1553_Readresp(INT portval);

P13W32API VOID __stdcall PC1553_Readrtdwd(INT TRval,INT SAval,INT countval,INT startval,LPVOID destptr,INT segval);

P13W32API INT __stdcall PC1553_Readwd(INT offset,INT segval);

P13W32API INT __stdcall PC1553_Transmit(INT portval);

P13W32API VOID __stdcall PC1553_Writebcdwd(INT countval,INT startval,LPVOID srcptr,INT segval);

P13W32API VOID __stdcall PC1553_Writertdwd(INT TRval,INT SAval,INT countval,INT startval,LPVOID srcptr,INT segval);

P13W32API VOID __stdcall PC1553_Writewd(INT value,INT offset,INT segval);


/**
*
*  Internal functions used by the PC1553-3 Driver.
*
**/

P13W32API USHORT __stdcall P12_Bitset(USHORT wordval,INT bitvalue,INT bitnum);

P13W32API BOOL __stdcall P12_Bittest(USHORT wordval,INT bitnum);

P13W32API ERRVAL __stdcall P12_Checklist(INT fh);

P13W32API VOID __stdcall P12_Clearlist(INT fh);

P13W32API VOID __stdcall P12_Config(INT reg0,INT reg1,INT reg2,HCARD handleval);

P13W32API ERRVAL __stdcall P12_Execconfig(LPCSTR nameptr,INT fh,HCARD handleval);

P13W32API ERRVAL __stdcall P12_Execmsg(LPCSTR nameptr,LPVOID bufptr,LPUSHORT swdptr,INT fh,HCARD handleval);

P13W32API ERRVAL __stdcall P12_Execute(LPCSTR nameptr,LPUSHORT swdptr,LPVOID dwdptr,INT fh,HCARD handleval);

P13W32API VOID __stdcall P12_Freedrv(VOID);

P13W32API INT __stdcall P12_In(INT addrval,HCARD handleval);

P13W32API INT __stdcall P12_Loadlist(LPCSTR filename);

P13W32API ERRVAL __stdcall P12_Locate(INT keytype,LPCSTR nameptr,INT fh);

P13W32API USHORT __stdcall P12_Maskshift(USHORT inputval,INT startbit,INT lengthval);

P13W32API VOID __stdcall P12_Out(INT dataval,INT addrval,HCARD handleval);

P13W32API USHORT __stdcall P12_Packcwd(INT TAval,INT TRval,INT SAval,INT WCval);

P13W32API USHORT __stdcall P12_Packwd(USHORT inputval,USHORT oldval,INT startbit,INT lengthval);

P13W32API INT __stdcall P12_Readb(INT fh);

P13W32API VOID __stdcall P12_Readbcdwd(INT countval,INT startval,LPVOID destptr,HCARD handleval);

P13W32API INT __stdcall P12_Readresp(HCARD handleval);

P13W32API VOID __stdcall P12_Readrtdwd(INT TRval,INT SAval,INT countval,INT startval,LPVOID destptr,HCARD handleval);

P13W32API INT __stdcall P12_Readw(INT fh);

P13W32API INT __stdcall P12_Readwd(INT offset,HCARD handleval);