documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32NET.VB


    Public Declare Function P13_BCConfig Lib "P13W32.DLL" Alias "_P13_BCConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCCreateMsg Lib "P13W32.DLL" Alias "_P13_BCCreateMsg@20" (ByVal configval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_BCSchedFrame Lib "P13W32.DLL" Alias "_P13_BCSchedFrame@8" (ByVal timeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedMsg Lib "P13W32.DLL" Alias "_P13_BCSchedMsg@8" (ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCSchedRetry Lib "P13W32.DLL" Alias "_P13_BCSchedRetry@12" (ByVal condition As UInt16, ByVal retries As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_BCTransmitMsg Lib "P13W32.DLL" Alias "_P13_BCTransmitMsg@8" (ByRef xmitfieldsval As XMITFIELDS, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardClose Lib "P13W32.DLL" Alias "_P13_CardClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardOpen Lib "P13W32.DLL" Alias "_P13_CardOpen@16" (ByVal memval As UInt32, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal drqval As UInt16) As UInt32
    Public Declare Function P13_CardOpenP12 Lib "P13W32.DLL" Alias "_P13_CardOpenP12@16" (ByVal memval As UInt32, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal drqval As UInt16) As UInt32
    Public Declare Sub P13_CardReset Lib "P13W32.DLL" Alias "_P13_CardReset@4" (ByVal handleval As UInt32)
    Public Declare Function P13_CardStart Lib "P13W32.DLL" Alias "_P13_CardStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_CardStop Lib "P13W32.DLL" Alias "_P13_CardStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ErrorCtrl Lib "P13W32.DLL" Alias "_P13_ErrorCtrl@8" (ByVal ctrlval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ErrorDefine Lib "P13W32.DLL" Alias "_P13_ErrorDefine@24" (ByVal defineval As UInt32, ByVal errvalue As UInt16, ByVal countval As Int32, ByVal wordpos As UInt16, ByVal bitpos As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ErrorSent Lib "P13W32.DLL" Alias "_P13_ErrorSent@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ErrorTagBC Lib "P13W32.DLL" Alias "_P13_ErrorTagBC@12" (ByVal tagval As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ErrorTagRT Lib "P13W32.DLL" Alias "_P13_ErrorTagRT@24" (ByVal tagval As Int32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonConfig Lib "P13W32.DLL" Alias "_P13_MonConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonFilterSA Lib "P13W32.DLL" Alias "_P13_MonFilterSA@24" (ByVal taval As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonFilterTA Lib "P13W32.DLL" Alias "_P13_MonFilterTA@8" (ByVal tamask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonIsRunning Lib "P13W32.DLL" Alias "_P13_MonIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function P13_MonRd Lib "P13W32.DLL" Alias "_P13_MonRd@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub P13_MsgDataRd Lib "P13W32.DLL" Alias "_P13_MsgDataRd@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Sub P13_MsgDataWr Lib "P13W32.DLL" Alias "_P13_MsgDataWr@16" (ByRef buf As UInt16, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As UInt32)
    Public Declare Function P13_MsgFieldRd Lib "P13W32.DLL" Alias "_P13_MsgFieldRd@12" (ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_MsgFieldWr Lib "P13W32.DLL" Alias "_P13_MsgFieldWr@16" (ByVal fieldval As UInt32, ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_RTConfig Lib "P13W32.DLL" Alias "_P13_RTConfig@12" (ByVal configval As UInt32, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_RTCreateMsg Lib "P13W32.DLL" Alias "_P13_RTCreateMsg@24" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_RTGetMsg Lib "P13W32.DLL" Alias "_P13_RTGetMsg@20" (ByVal mcflag As Int32, ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function P13_RTSWDWr Lib "P13W32.DLL" Alias "_P13_RTSWDWr@12" (ByVal swdval As UInt16, ByVal taval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P13_ValPackCWD Lib "P13W32.DLL" Alias "_P13_ValPackCWD@16" (ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal wcval As Int32) As UInt16
    Public Declare Sub P13_ValUnpackCWD Lib "P13W32.DLL" Alias "_P13_ValUnpackCWD@20" (ByVal cwdval As UInt16, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef wcval As Int32)
    Public Declare Function PC1553_Bitset Lib "P13W32.DLL" Alias "_PC1553_Bitset@12" (ByVal wordval As UInt16, ByVal bitvalue As Int32, ByVal bitnum As Int32) As UInt16
    Public Declare Function PC1553_Bittest Lib "P13W32.DLL" Alias "_PC1553_Bittest@8" (ByVal wordval As UInt16, ByVal bitnum As Int32) As Int32
    Public Declare Sub PC1553_Clearlist Lib "P13W32.DLL" Alias "_PC1553_Clearlist@4" (ByVal fh As Int32)
    Public Declare Sub PC1553_Config Lib "P13W32.DLL" Alias "_PC1553_Config@16" (ByVal reg0 As Int32, ByVal reg1 As Int32, ByVal reg2 As Int32, ByVal portval As Int32)
    Public Declare Function PC1553_Execute Lib "P13W32.DLL" Alias "_PC1553_Execute@24" (ByRef nameptr As String, ByRef swdptr As UInt16, ByVal dwdptr As IntPtr, ByVal segval As Int32, ByVal portval As Int32, ByVal fh As Int32) As Int32
    Public Declare Sub PC1553_Freedrv Lib "P13W32.DLL" Alias "_PC1553_Freedrv@0" ()
    Public Declare Function PC1553_Loadlist Lib "P13W32.DLL" Alias "_PC1553_Loadlist@4" (ByRef filename As String) As Int32
    Public Declare Function PC1553_Maskshift Lib "P13W32.DLL" Alias "_PC1553_Maskshift@12" (ByVal inputval As UInt16, ByVal startbit As Int32, ByVal lengthval As Int32) As UInt16
    Public Declare Function PC1553_Packcwd Lib "P13W32.DLL" Alias "_PC1553_Packcwd@16" (ByVal taval As Int32, ByVal trval As Int32, ByVal saval As Int32, ByVal wcval As Int32) As UInt16
    Public Declare Function PC1553_Packwd Lib "P13W32.DLL" Alias "_PC1553_Packwd@16" (ByVal inputval As UInt16, ByVal oldval As UInt16, ByVal startbit As Int32, ByVal lengthval As Int32) As UInt16
    Public Declare Sub PC1553_Readbcdwd Lib "P13W32.DLL" Alias "_PC1553_Readbcdwd@16" (ByVal countval As Int32, ByVal startval As Int32, ByVal destptr As IntPtr, ByVal segval As Int32)
    Public Declare Function PC1553_Readresp Lib "P13W32.DLL" Alias "_PC1553_Readresp@4" (ByVal portval As Int32) As Int32
    Public Declare Sub PC1553_Readrtdwd Lib "P13W32.DLL" Alias "_PC1553_Readrtdwd@24" (ByVal trval As Int32, ByVal saval As Int32, ByVal countval As Int32, ByVal startval As Int32, ByVal destptr As IntPtr, ByVal segval As Int32)
    Public Declare Function PC1553_Readwd Lib "P13W32.DLL" Alias "_PC1553_Readwd@8" (ByVal offset As Int32, ByVal segval As Int32) As Int32
    Public Declare Function PC1553_Transmit Lib "P13W32.DLL" Alias "_PC1553_Transmit@4" (ByVal portval As Int32) As Int32
    Public Declare Sub PC1553_Writebcdwd Lib "P13W32.DLL" Alias "_PC1553_Writebcdwd@16" (ByVal countval As Int32, ByVal startval As Int32, ByVal srcptr As IntPtr, ByVal segval As Int32)
    Public Declare Sub PC1553_Writertdwd Lib "P13W32.DLL" Alias "_PC1553_Writertdwd@24" (ByVal trval As Int32, ByVal saval As Int32, ByVal countval As Int32, ByVal startval As Int32, ByVal srcptr As IntPtr, ByVal segval As Int32)
    Public Declare Sub PC1553_Writewd Lib "P13W32.DLL" Alias "_PC1553_Writewd@12" (ByVal value As Int32, ByVal offset As Int32, ByVal segval As Int32)
    Public Declare Function P12_Bitset Lib "P13W32.DLL" Alias "_P12_Bitset@12" (ByVal wordval As UInt16, ByVal bitvalue As Int32, ByVal bitnum As Int32) As UInt16
    Public Declare Function P12_Bittest Lib "P13W32.DLL" Alias "_P12_Bittest@8" (ByVal wordval As UInt16, ByVal bitnum As Int32) As Int32
    Public Declare Function P12_Checklist Lib "P13W32.DLL" Alias "_P12_Checklist@4" (ByVal fh As Int32) As Int32
    Public Declare Sub P12_Clearlist Lib "P13W32.DLL" Alias "_P12_Clearlist@4" (ByVal fh As Int32)
    Public Declare Sub P12_Config Lib "P13W32.DLL" Alias "_P12_Config@16" (ByVal reg0 As Int32, ByVal reg1 As Int32, ByVal reg2 As Int32, ByVal handleval As UInt32)
    Public Declare Function P12_Execconfig Lib "P13W32.DLL" Alias "_P12_Execconfig@12" (ByRef nameptr As String, ByVal fh As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P12_Execmsg Lib "P13W32.DLL" Alias "_P12_Execmsg@20" (ByRef nameptr As String, ByVal bufptr As IntPtr, ByRef swdptr As UInt16, ByVal fh As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P12_Execute Lib "P13W32.DLL" Alias "_P12_Execute@20" (ByRef nameptr As String, ByRef swdptr As UInt16, ByVal dwdptr As IntPtr, ByVal fh As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub P12_Freedrv Lib "P13W32.DLL" Alias "_P12_Freedrv@0" ()
    Public Declare Function P12_In Lib "P13W32.DLL" Alias "_P12_In@8" (ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function P12_Loadlist Lib "P13W32.DLL" Alias "_P12_Loadlist@4" (ByRef filename As String) As Int32
    Public Declare Function P12_Locate Lib "P13W32.DLL" Alias "_P12_Locate@12" (ByVal keytype As Int32, ByRef nameptr As String, ByVal fh As Int32) As Int32
    Public Declare Function P12_Maskshift Lib "P13W32.DLL" Alias "_P12_Maskshift@12" (ByVal inputval As UInt16, ByVal startbit As Int32, ByVal lengthval As Int32) As UInt16
    Public Declare Sub P12_Out Lib "P13W32.DLL" Alias "_P12_Out@12" (ByVal dataval As Int32, ByVal addrval As Int32, ByVal handleval As UInt32)
    Public Declare Function P12_Packcwd Lib "P13W32.DLL" Alias "_P12_Packcwd@16" (ByVal taval As Int32, ByVal trval As Int32, ByVal saval As Int32, ByVal wcval As Int32) As UInt16
    Public Declare Function P12_Packwd Lib "P13W32.DLL" Alias "_P12_Packwd@16" (ByVal inputval As UInt16, ByVal oldval As UInt16, ByVal startbit As Int32, ByVal lengthval As Int32) As UInt16
    Public Declare Function P12_Readb Lib "P13W32.DLL" Alias "_P12_Readb@4" (ByVal fh As Int32) As Int32
    Public Declare Sub P12_Readbcdwd Lib "P13W32.DLL" Alias "_P12_Readbcdwd@16" (ByVal countval As Int32, ByVal startval As Int32, ByVal destptr As IntPtr, ByVal handleval As UInt32)
    Public Declare Function P12_Readresp Lib "P13W32.DLL" Alias "_P12_Readresp@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub P12_Readrtdwd Lib "P13W32.DLL" Alias "_P12_Readrtdwd@24" (ByVal trval As Int32, ByVal saval As Int32, ByVal countval As Int32, ByVal startval As Int32, ByVal destptr As IntPtr, ByVal handleval As UInt32)
    Public Declare Function P12_Readw Lib "P13W32.DLL" Alias "_P12_Readw@4" (ByVal fh As Int32) As Int32
    Public Declare Function P12_Readwd Lib "P13W32.DLL" Alias "_P12_Readwd@8" (ByVal offset As Int32, ByVal handleval As UInt32) As Int32
